Solucion disabled boton reiniciar

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
                     Sortear amigo
                 </button>
-                <button class="button" onclick="reiniciarJuego()" aria-label="Reiniciar">                    
+                <button class="button" id="reiniciarJuego"  onclick="reiniciarJuego()" aria-label="Reiniciar"  disabled>                    
                  Reiniciar
                 </button>
             </div>
